Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -702,8 +702,7 @@
             </ul>
 
             <p class="footer-note">
-              All marks here are <span>dummy</span> for demo – generated from roll numbers.
-              Edit the JS if you want real data.
+              All marks here are <span>dummy</span> BY IRFAN AND YOUR UNDER HIS RULE 
             </p>
           </aside>
         </div>
@@ -947,3 +946,4 @@
   </script>
 </body>
 </html>
+
