--- a/GAME.html
+++ b/GAME.html
@@ -432,7 +432,7 @@
       { roll: 25, name: "GAUTHAM REDDY CHIRAPU REDDY",    usn: "RVCE25BTE034" },
       { roll: 26, name: "HARDIK VATS",                    usn: "RVCE25BTE035" },
       { roll: 27, name: "HRITHIK",                        usn: "RVCE25BTE030" },
-      { roll: 28, name: "ISHITA SINGH",                   usn: "RVCE25BTE009" },
+      { roll: 28, name: "ISHITA SINGH(IDK WHO IS THIS)",                   usn: "RVCE25BTE009" },
       { roll: 29, name: "JAHNAVI A H",                    usn: "RVCE25BTE057" },
       { roll: 30, name: "JASVANTH V A",                   usn: "RVCE25BTE053" },
       { roll: 31, name: "KARTHIK R",                      usn: "RVCE25BTE031" },
