--- a/index.html
+++ b/index.html
@@ -816,7 +816,8 @@
       { roll: 60, name: "VANI GUSAIN",                    usn: "RVCE25BTE036" },
       { roll: 61, name: "VEDAANT RAJ",                    usn: "RVCE25BTE007" },
       { roll: 62, name: "VINAYAK S HALLI",                usn: "RVCE25BTE054" },
-      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" }
+      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" },
+       { roll: 67, name: "AKARSH SHARMA",                 usn: "RVCE25BCY019" }
     ];
 
     // Dummy marks for ALL students, auto-generated from roll
@@ -946,4 +947,5 @@
   </script>
 </body>
 </html>
+
 
