--- a/index.html
+++ b/index.html
@@ -698,11 +698,12 @@
               <li><strong>1.</strong> Find your <strong>name</strong> on the left and click it.</li>
               <li><strong>2.</strong> In the popup, type your <strong>RVCE number (USN)</strong> exactly.</li>
               <li><strong>3.</strong> If USN is correct, you go to a <strong>mini-game</strong>.</li>
-              <li><strong>4.</strong> Win the game → you get a message saying <strong>“you’re in WhatsApp group”</strong> and see the full <strong>scoreboard</strong>.</li>
+              <li><strong>4.</strong> Win the game → answer 2 small questions → you get a message saying <strong>“you’re in WhatsApp group”</strong> and see the full <strong>scoreboard</strong>.</li>
             </ul>
 
             <p class="footer-note">
-              All marks here are <span>dummy</span> BY IRFAN AND YOUR UNDER HIS RULE 
+              All marks here are <span>dummy</span> for demo – generated from roll numbers.
+              Edit the JS if you want real data.
             </p>
           </aside>
         </div>
@@ -816,8 +817,7 @@
       { roll: 60, name: "VANI GUSAIN",                    usn: "RVCE25BTE036" },
       { roll: 61, name: "VEDAANT RAJ",                    usn: "RVCE25BTE007" },
       { roll: 62, name: "VINAYAK S HALLI",                usn: "RVCE25BTE054" },
-      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" },
-       { roll: 67, name: "AKARSH SHARMA",                 usn: "RVCE25BCY019" }
+      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" }
     ];
 
     // Dummy marks for ALL students, auto-generated from roll
@@ -947,5 +947,3 @@
   </script>
 </body>
 </html>
-
-
