--- a/GAME.html
+++ b/GAME.html
@@ -424,7 +424,7 @@
             <p class="game-info"><strong>Final step:</strong> answer these 2 questions correctly.</p>
 
             <div class="quiz-q">
-              <strong>Q1. What phone does NNN use?</strong>
+              <strong>Q1. What phone does NNN  sir use?</strong>
               <div class="quiz-options">
                 <label><input type="radio" name="q1" value="iphone"> iPhone</label>
                 <label><input type="radio" name="q1" value="samsung"> Samsung</label>
@@ -437,7 +437,7 @@
               <div class="quiz-options">
                 <label><input type="radio" name="q2" value="brothers"> Brothers and sisters</label>
                 <label><input type="radio" name="q2" value="guys"> Guys and sisters</label>
-                <label><input type="radio" name="q2" value="dearall"> Dear all</label>
+                <label><input type="radio" name="q2" value="dearall"> gay and lesbians</label>
               </div>
             </div>
 
