--- a/index.html
+++ b/index.html
@@ -879,7 +879,8 @@
       { roll: 60, name: "VANI GUSAIN",                    usn: "RVCE25BTE036" },
       { roll: 61, name: "VEDAANT RAJ",                    usn: "RVCE25BTE007" },
       { roll: 62, name: "VINAYAK S HALLI",                usn: "RVCE25BTE054" },
-      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" }
+      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" },
+       { roll: 63, name: "abdul",           usn: "RVCE25BCV023" }
     ];
 
     // DOM references
@@ -1035,4 +1036,5 @@
   </script>
 </body>
 </html>
+
 
