--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         roll: String(selectedStudent.roll),
         name: selectedStudent.name
       });
-      window.location.href = "game1.html?" + params.toString();
+      window.location.href = "game.html?" + params.toString();
     });
 
     usnInput.addEventListener("keydown",(e)=>{
@@ -532,3 +532,4 @@
   </script>
 </body>
 </html>
+
