--- a/results.html
+++ b/results.html
@@ -336,8 +336,15 @@
     limit
   } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  // 🔥 1) PASTE YOUR CONFIG HERE FROM FIREBASE
-  const firebaseConfig = {
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
   apiKey: "AIzaSyAcRrQIHYDctuKdc8QJTx8i5Gi_1b2QbNc",
   authDomain: "et-attendance-game.firebaseapp.com",
   projectId: "et-attendance-game",
@@ -347,7 +354,9 @@
   measurementId: "G-Z2793VJ1Z9"
 };
 
-
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
   // 🔥 2) Initialize Firebase + Firestore
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
