--- a/md-quiz.html
+++ b/md-quiz.html
@@ -262,14 +262,27 @@
 
   <script>
     // TODO: same firebaseConfig as index.html
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+  // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyAcRrQIHYDctuKdc8QJTx8i5Gi_1b2QbNc",
+  authDomain: "et-attendance-game.firebaseapp.com",
+  projectId: "et-attendance-game",
+  storageBucket: "et-attendance-game.firebasestorage.app",
+  messagingSenderId: "398432369224",
+  appId: "1:398432369224:web:2d4a76360b0ea3d99e367d",
+  measurementId: "G-Z2793VJ1Z9"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
