--- a/index.html
+++ b/index.html
@@ -274,202 +274,192 @@
     </div>
   </div>
 
-  <!-- Firebase + App Script -->
-  <!-- Firebase v8 CDN (simpler API) -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<!-- Firebase v8 CDN (simpler API) -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-  <script>
-    // TODO: paste your real Firebase config here
-   // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+<script>
+  // TODO: put your real Firebase config here
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT.firebaseapp.com",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_PROJECT.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyAcRrQIHYDctuKdc8QJTx8i5Gi_1b2QbNc",
-  authDomain: "et-attendance-game.firebaseapp.com",
-  projectId: "et-attendance-game",
-  storageBucket: "et-attendance-game.firebasestorage.app",
-  messagingSenderId: "398432369224",
-  appId: "1:398432369224:web:2d4a76360b0ea3d99e367d",
-  measurementId: "G-Z2793VJ1Z9"
-};
+  const students = [
+    { roll: 1,  name: "ABHAY BALIGA B",                 usn: "RVCE25BTE059" },
+    { roll: 2,  name: "ABHINAV H KRISHNA",              usn: "RVCE25BTE051" },
+    { roll: 3,  name: "ANANYA H S",                     usn: "RVCE25BTE058" },
+    { roll: 4,  name: "ANANYA KARTHIK",                 usn: "RVCE25BTE006" },
+    { roll: 5,  name: "ANAY DURG",                      usn: "RVCE25BTE001" },
+    { roll: 6,  name: "ANIRUDH S J",                    usn: "RVCE25BTE045" },
+    { roll: 7,  name: "ARAVIND R",                      usn: "RVCE25BTE055" },
+    { roll: 8,  name: "ARNAV GANGOOR",                  usn: "RVCE25BTE015" },
+    { roll: 9,  name: "ARNAV GAUTAM",                   usn: "RVCE25BTE016" },
+    { roll: 10, name: "ARYA RITESH KHODAKE",            usn: "RVCE25BTE043" },
+    { roll: 11, name: "ATHARVA TYAGI",                  usn: "RVCE25BTE061" },
+    { roll: 12, name: "ATHARVA VARSHNEY",               usn: "RVCE25BTE041" },
+    { roll: 13, name: "BHARGAV BEKKAM",                 usn: "RVCE25BTE028" },
+    { roll: 14, name: "BHARGAVI S B",                   usn: "RVCE25BTE011" },
+    { roll: 15, name: "CHANDRAKANTHA",                  usn: "RVCE25BTE029" },
+    { roll: 16, name: "CHIRAG CHANDRA",                 usn: "RVCE25BTE044" },
+    { roll: 17, name: "D R SHREESUJA",                  usn: "RVCE25BTE019" },
+    { roll: 18, name: "DAIVIK MANKAME",                 usn: "RVCE25BTE032" },
+    { roll: 19, name: "DAKSH JAIN",                     usn: "RVCE25BTE038" },
+    { roll: 20, name: "DEBDEEP GHOSH",                  usn: "RVCE25BTE020" },
+    { roll: 21, name: "DHRUV TANDEKAR",                 usn: "RVCE25BTE014" },
+    { roll: 22, name: "DIVYA YANAMASHETTI",             usn: "RVCE25BTE018" },
+    { roll: 23, name: "DONDAPATI SINDHUJA",             usn: "RVCE25BTE025" },
+    { roll: 24, name: "GARGI TOMAR",                    usn: "RVCE25BTE005" },
+    { roll: 25, name: "GAUTHAM REDDY CHIRAPU REDDY",    usn: "RVCE25BTE034" },
+    { roll: 26, name: "HARDIK VATS",                    usn: "RVCE25BTE035" },
+    { roll: 27, name: "HRITHIK",                        usn: "RVCE25BTE030" },
+    { roll: 28, name: "ISHITA SINGH",                   usn: "RVCE25BTE009" },
+    { roll: 29, name: "JAHNAVI A H",                    usn: "RVCE25BTE057" },
+    { roll: 30, name: "JASVANTH V A",                   usn: "RVCE25BTE053" },
+    { roll: 31, name: "KARTHIK R",                      usn: "RVCE25BTE031" },
+    { roll: 32, name: "KSHITI CHAUDHARY",               usn: "RVCE25BTE021" },
+    { roll: 33, name: "MANIK KANYAL",                   usn: "RVCE25BTE033" },
+    { roll: 34, name: "MANYA S",                        usn: "RVCE25BTE048" },
+    { roll: 35, name: "MD IRFAN DARVAN",                usn: "RVCE25BTE013" },
+    { roll: 36, name: "MEGHNA ROY",                     usn: "RVCE25BTE060" },
+    { roll: 37, name: "MIA MICHAEL",                    usn: "RVCE25BTE004" },
+    { roll: 38, name: "MOHIT RAJ JALGAR",               usn: "RVCE25BTE026" },
+    { roll: 39, name: "NIKHIL JAGADEESH KORI",          usn: "RVCE25BTE008" },
+    { roll: 40, name: "NIMIT JAIN",                     usn: "RVCE25BTE037" },
+    { roll: 41, name: "PALLAVI K",                      usn: "RVCE25BTE012" },
+    { roll: 42, name: "PRANYA",                         usn: "RVCE25BTE022" },
+    { roll: 43, name: "RISHAB KASHYAP A",               usn: "RVCE25BTE047" },
+    { roll: 44, name: "SAI PRAKASH J",                  usn: "RVCE25BTE023" },
+    { roll: 45, name: "SAMANVAY SHOBHIT",               usn: "RVCE25BTE063" },
+    { roll: 46, name: "SANATH KUMAR N",                 usn: "RVCE25BTE017" },
+    { roll: 47, name: "SANDYA PRITHIKA BALAJI",         usn: "RVCE25BTE049" },
+    { roll: 48, name: "SATYADEEP SREENIVAS",            usn: "RVCE25BTE024" },
+    { roll: 49, name: "SKANDHA VISAKHA",                usn: "RVCE25BTE003" },
+    { roll: 50, name: "SOHAN A GADAVI",                 usn: "RVCE25BTE010" },
+    { roll: 51, name: "SRIJAN SANJEEV INGALAGI",        usn: "RVCE25BTE050" },
+    { roll: 52, name: "STUTHI SANTOSH MATHAPATI",       usn: "RVCE25BTE052" },
+    { roll: 53, name: "SUHAS CHAWAN",                   usn: "RVCE25BTE056" },
+    { roll: 54, name: "SUHAS V J",                      usn: "RVCE25BTE039" },
+    { roll: 55, name: "SUJAN KUMAR S K",                usn: "RVCE25BTE046" },
+    { roll: 56, name: "SWAPNIL SAHU",                   usn: "RVCE25BTE042" },
+    { roll: 57, name: "THARICKA MURARI",                usn: "RVCE25BTE027" },
+    { roll: 58, name: "THARUN S",                       usn: "RVCE25BTE002" },
+    { roll: 59, name: "VAISHNAVI KARPUR",               usn: "RVCE25BTE062" },
+    { roll: 60, name: "VANI GUSAIN",                    usn: "RVCE25BTE036" },
+    { roll: 61, name: "VEDAANT RAJ",                    usn: "RVCE25BTE007" },
+    { roll: 62, name: "VINAYAK S HALLI",                usn: "RVCE25BTE054" },
+    { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" }
+  ];
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+  const studentListEl = document.getElementById("studentList");
+  const searchInputEl = document.getElementById("searchInput");
+  const visibleCountEl = document.getElementById("visibleCount");
+  const modal = document.getElementById("loginModal");
+  const modalName = document.getElementById("modalStudentName");
+  const modalUsn = document.getElementById("modalStudentUsn");
+  const modalRoll = document.getElementById("modalStudentRoll");
+  const closeModalBtn = document.getElementById("closeModalBtn");
+  const loginForm = document.getElementById("loginForm");
+  const usnInput = document.getElementById("usnInput");
+  const loginError = document.getElementById("loginError");
 
-    const students = [
-      { roll: 1,  name: "ABHAY BALIGA B",                 usn: "RVCE25BTE059" },
-      { roll: 2,  name: "ABHINAV H KRISHNA",              usn: "RVCE25BTE051" },
-      { roll: 3,  name: "ANANYA H S",                     usn: "RVCE25BTE058" },
-      { roll: 4,  name: "ANANYA KARTHIK",                 usn: "RVCE25BTE006" },
-      { roll: 5,  name: "ANAY DURG",                      usn: "RVCE25BTE001" },
-      { roll: 6,  name: "ANIRUDH S J",                    usn: "RVCE25BTE045" },
-      { roll: 7,  name: "ARAVIND R",                      usn: "RVCE25BTE055" },
-      { roll: 8,  name: "ARNAV GANGOOR",                  usn: "RVCE25BTE015" },
-      { roll: 9,  name: "ARNAV GAUTAM",                   usn: "RVCE25BTE016" },
-      { roll: 10, name: "ARYA RITESH KHODAKE",            usn: "RVCE25BTE043" },
-      { roll: 11, name: "ATHARVA TYAGI",                  usn: "RVCE25BTE061" },
-      { roll: 12, name: "ATHARVA VARSHNEY",               usn: "RVCE25BTE041" },
-      { roll: 13, name: "BHARGAV BEKKAM",                 usn: "RVCE25BTE028" },
-      { roll: 14, name: "BHARGAVI S B",                   usn: "RVCE25BTE011" },
-      { roll: 15, name: "CHANDRAKANTHA",                  usn: "RVCE25BTE029" },
-      { roll: 16, name: "CHIRAG CHANDRA",                 usn: "RVCE25BTE044" },
-      { roll: 17, name: "D R SHREESUJA",                  usn: "RVCE25BTE019" },
-      { roll: 18, name: "DAIVIK MANKAME",                 usn: "RVCE25BTE032" },
-      { roll: 19, name: "DAKSH JAIN",                     usn: "RVCE25BTE038" },
-      { roll: 20, name: "DEBDEEP GHOSH",                  usn: "RVCE25BTE020" },
-      { roll: 21, name: "DHRUV TANDEKAR",                 usn: "RVCE25BTE014" },
-      { roll: 22, name: "DIVYA YANAMASHETTI",             usn: "RVCE25BTE018" },
-      { roll: 23, name: "DONDAPATI SINDHUJA",             usn: "RVCE25BTE025" },
-      { roll: 24, name: "GARGI TOMAR",                    usn: "RVCE25BTE005" },
-      { roll: 25, name: "GAUTHAM REDDY CHIRAPU REDDY",    usn: "RVCE25BTE034" },
-      { roll: 26, name: "HARDIK VATS",                    usn: "RVCE25BTE035" },
-      { roll: 27, name: "HRITHIK",                        usn: "RVCE25BTE030" },
-      { roll: 28, name: "ISHITA SINGH",                   usn: "RVCE25BTE009" },
-      { roll: 29, name: "JAHNAVI A H",                    usn: "RVCE25BTE057" },
-      { roll: 30, name: "JASVANTH V A",                   usn: "RVCE25BTE053" },
-      { roll: 31, name: "KARTHIK R",                      usn: "RVCE25BTE031" },
-      { roll: 32, name: "KSHITI CHAUDHARY",               usn: "RVCE25BTE021" },
-      { roll: 33, name: "MANIK KANYAL",                   usn: "RVCE25BTE033" },
-      { roll: 34, name: "MANYA S",                        usn: "RVCE25BTE048" },
-      { roll: 35, name: "MD IRFAN DARVAN",                usn: "RVCE25BTE013" },
-      { roll: 36, name: "MEGHNA ROY",                     usn: "RVCE25BTE060" },
-      { roll: 37, name: "MIA MICHAEL",                    usn: "RVCE25BTE004" },
-      { roll: 38, name: "MOHIT RAJ JALGAR",               usn: "RVCE25BTE026" },
-      { roll: 39, name: "NIKHIL JAGADEESH KORI",          usn: "RVCE25BTE008" },
-      { roll: 40, name: "NIMIT JAIN",                     usn: "RVCE25BTE037" },
-      { roll: 41, name: "PALLAVI K",                      usn: "RVCE25BTE012" },
-      { roll: 42, name: "PRANYA",                         usn: "RVCE25BTE022" },
-      { roll: 43, name: "RISHAB KASHYAP A",               usn: "RVCE25BTE047" },
-      { roll: 44, name: "SAI PRAKASH J",                  usn: "RVCE25BTE023" },
-      { roll: 45, name: "SAMANVAY SHOBHIT",               usn: "RVCE25BTE063" },
-      { roll: 46, name: "SANATH KUMAR N",                 usn: "RVCE25BTE017" },
-      { roll: 47, name: "SANDYA PRITHIKA BALAJI",         usn: "RVCE25BTE049" },
-      { roll: 48, name: "SATYADEEP SREENIVAS",            usn: "RVCE25BTE024" },
-      { roll: 49, name: "SKANDHA VISAKHA",                usn: "RVCE25BTE003" },
-      { roll: 50, name: "SOHAN A GADAVI",                 usn: "RVCE25BTE010" },
-      { roll: 51, name: "SRIJAN SANJEEV INGALAGI",        usn: "RVCE25BTE050" },
-      { roll: 52, name: "STUTHI SANTOSH MATHAPATI",       usn: "RVCE25BTE052" },
-      { roll: 53, name: "SUHAS CHAWAN",                   usn: "RVCE25BTE056" },
-      { roll: 54, name: "SUHAS V J",                      usn: "RVCE25BTE039" },
-      { roll: 55, name: "SUJAN KUMAR S K",                usn: "RVCE25BTE046" },
-      { roll: 56, name: "SWAPNIL SAHU",                   usn: "RVCE25BTE042" },
-      { roll: 57, name: "THARICKA MURARI",                usn: "RVCE25BTE027" },
-      { roll: 58, name: "THARUN S",                       usn: "RVCE25BTE002" },
-      { roll: 59, name: "VAISHNAVI KARPUR",               usn: "RVCE25BTE062" },
-      { roll: 60, name: "VANI GUSAIN",                    usn: "RVCE25BTE036" },
-      { roll: 61, name: "VEDAANT RAJ",                    usn: "RVCE25BTE007" },
-      { roll: 62, name: "VINAYAK S HALLI",                usn: "RVCE25BTE054" },
-      { roll: 63, name: "YASHASVI ARVIND JAIN",           usn: "RVCE25BTE040" }
-    ];
+  let currentStudent = null;
 
-    const studentListEl = document.getElementById("studentList");
-    const searchInputEl = document.getElementById("searchInput");
-    const visibleCountEl = document.getElementById("visibleCount");
-    const modal = document.getElementById("loginModal");
-    const modalName = document.getElementById("modalStudentName");
-    const modalUsn = document.getElementById("modalStudentUsn");
-    const modalRoll = document.getElementById("modalStudentRoll");
-    const closeModalBtn = document.getElementById("closeModalBtn");
-    const loginForm = document.getElementById("loginForm");
-    const usnInput = document.getElementById("usnInput");
-    const loginError = document.getElementById("loginError");
+  function renderStudents(filter = "") {
+    const q = filter.trim().toLowerCase();
+    studentListEl.innerHTML = "";
+    let count = 0;
+    students.forEach((s) => {
+      const match =
+        !q ||
+        s.name.toLowerCase().includes(q) ||
+        String(s.roll).includes(q);
+      if (!match) return;
+      count++;
+      const btn = document.createElement("button");
+      btn.type = "button";
+      btn.className = "student-btn";
+      btn.innerHTML = `
+        <span class="roll">${s.roll}</span>
+        <span class="student-name">${s.name}</span>
+      `;
+      btn.addEventListener("click", () => openModal(s));
+      studentListEl.appendChild(btn);
+    });
+    visibleCountEl.textContent = count;
+  }
 
-    let currentStudent = null;
+  function openModal(s) {
+    currentStudent = s;
+    modalName.textContent = s.name;
+    modalUsn.textContent = s.usn + " • ET";
+    modalRoll.textContent = s.roll;
+    loginError.textContent = "";
+    usnInput.value = "";
+    modal.classList.add("active");
+    usnInput.focus();
+  }
 
-    function renderStudents(filter=""){
-      const q = filter.trim().toLowerCase();
-      studentListEl.innerHTML = "";
-      let count = 0;
-      students.forEach(s=>{
-        const match =
-          !q ||
-          s.name.toLowerCase().includes(q) ||
-          String(s.roll).includes(q);
-        if(!match) return;
-        count++;
-        const btn = document.createElement("button");
-        btn.className = "student-btn";
-        btn.type = "button";
-        btn.innerHTML = `
-          <span class="roll">${s.roll}</span>
-          <span class="student-name">${s.name}</span>
-        `;
-        btn.addEventListener("click",()=>openModal(s));
-        studentListEl.appendChild(btn);
-      });
-      visibleCountEl.textContent = count;
+  function closeModal() {
+    modal.classList.remove("active");
+    currentStudent = null;
+  }
+
+  searchInputEl.addEventListener("input", (e) => renderStudents(e.target.value));
+  closeModalBtn.addEventListener("click", closeModal);
+  modal.addEventListener("click", (e) => { if (e.target === modal) closeModal(); });
+
+  loginForm.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    if (!currentStudent) return;
+
+    const entered = usnInput.value.trim().toUpperCase();
+    const expected = currentStudent.usn.toUpperCase();
+    if (!entered) {
+      loginError.textContent = "Enter your USN.";
+      return;
     }
-
-    function openModal(s){
-      currentStudent = s;
-      modalName.textContent = s.name;
-      modalUsn.textContent = s.usn + " • ET";
-      modalRoll.textContent = s.roll;
-      loginError.textContent = "";
-      usnInput.value = "";
-      modal.classList.add("active");
-      usnInput.focus();
+    if (entered !== expected) {
+      loginError.textContent = "Wrong USN for this name.";
+      return;
     }
-    function closeModal(){
-      modal.classList.remove("active");
-      currentStudent = null;
-    }
+    loginError.textContent = "";
 
-    searchInputEl.addEventListener("input", e=>renderStudents(e.target.value));
-    closeModalBtn.addEventListener("click", closeModal);
-    modal.addEventListener("click", e=>{ if(e.target===modal) closeModal(); });
-
-    loginForm.addEventListener("submit", async (e)=>{
-      e.preventDefault();
-      if(!currentStudent) return;
-      const entered = usnInput.value.trim().toUpperCase();
-      const expected = currentStudent.usn.toUpperCase();
-      if(!entered){
-        loginError.textContent = "Enter your USN.";
-        return;
-      }
-      if(entered !== expected){
-        loginError.textContent = "Wrong USN for this name.";
-        return;
-      }
-      loginError.textContent = "";
-
-      // Optionally create basic doc in Firestore (so everyone has an entry)
-      try {
-        await db.collection("scores").doc(entered).set({
-          usn: entered,
-          name: currentStudent.name,
-          roll: currentStudent.roll,
-          // placeholder scores until they actually play
-          totalScore: 0,
-          gameTime: null,
-          quizTime: null,
-          accuracy: null,
-          updatedAt: firebase.firestore.FieldValue.serverTimestamp()
-        }, { merge: true });
-      } catch (err) {
-        console.error("Error writing to Firestore:", err);
-      }
-
-      // Redirect to Game 1 (no localStorage, only URL params)
-      const params = new URLSearchParams({
+    try {
+      await db.collection("scores").doc(entered).set({
         usn: entered,
         name: currentStudent.name,
-        roll: currentStudent.roll
-      });
-      window.location.href = "cards.html?" + params.toString();
-    });
+        roll: currentStudent.roll,
+        totalScore: 0,
+        gameTime: null,
+        quizTime: null,
+        accuracy: null,
+        updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+      }, { merge: true });
+    } catch (err) {
+      console.error("Firestore write error:", err);
+    }
 
-    renderStudents();
-  </script>
+    const params = new URLSearchParams({
+      usn: entered,
+      name: currentStudent.name,
+      roll: currentStudent.roll
+    });
+    window.location.href = "cards.html?" + params.toString();
+  });
+
+  // initial render
+  renderStudents();
+</script>
+
+
+  
 </body>
 </html>
+
